# common_interview_questions

./: Dockerfile  Jenkinsfile  Makefile  README.md  deployment.yaml  pyproject.toml  settings.toml
.ssh/: goran  goran.pub
calculate_user_age/: README.md  birthday.py
count_ten/: README.md  rnd.py
fizzbuzz/: README.md  entrypoint.sh  foobar.py
greet_user/: README.md  greet.py
hourglass/: hrgls.py  tests.py
random_number/: README.md  random_num.py
simple_calc/: README.md  calc1.py  calculator.py
