[tool.poetry]
name = "All solutions"
version = "1.1.0"
description = "Optimal answers to common software engineering interview questions"
authors = ["Goran Dabar-Lovac <gorandabarlovac@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

